# learn-gtk4

./: README.md  pyproject.toml
src/: a_template.ui  adwaita_toolbar_view.py  adwaita_toolbar_view.ui  builder.py  form_window.py  form_window.ui  gtk_template.py  hello_world.py  nested_templates.py  toolbarview_no_template.py
src/templates/: a_template.ui  form_window.ui  nested_button.ui  nesting_window.ui
