[tool.poetry]
name = "learn-gtk4"
version = "0.1.0"
description = ""
authors = ["Ajahn Jhanarato <jhanarato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygobject = "^3.48.2"
pygobject-stubs = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
